# ShoppingListAnalyzer

./: Cargo.toml  README.md  flake.nix
shoppinglistanalyzer/: Cargo.toml
shoppinglistanalyzer/src/: data_structures.rs  main.rs
shoppinglistanalyzer/src/categorization/: gemini.rs  mod.rs
shoppinglistanalyzer/src/custom_button/: imp.rs  mod.rs
shoppinglistanalyzer/src/data_analysis/: mod.rs
shoppinglistanalyzer/src/screens/: mod.rs
shoppinglistanalyzer/src/screens/multi_list_screen/: mod.rs
shoppinglistanalyzer/src/sqlite/: data_structures.rs  mod.rs
shoppinglistanalyzer/src/ui/: add_list_dialog.rs  mod.rs
shoppinglistanalyzer/src/ui/components/: style.css
shoppinglistanalyzer/src/ui/components/higtlighted_button/: mod.rs
shoppinglistanalyzer/src/ui/items_screen/: list_view.rs  mod.rs
shoppinglistanalyzer/src/ui/items_screen/information_panel/: chart.rs  edit_item_dialog.rs  mod.rs
shoppinglistanalyzer/src/ui/items_screen/information_panel/dialogs/: edit_item_dialog.rs  mod.rs
shoppinglistanalyzer/src/ui/multi_list_screen/: categories.rs  charts.rs  mod.rs  totals.rs
shoppinglistanalyzer/src/ui/nutrition_screen/: list_view.rs  mod.rs
shoppinglistanalyzer/src/ui/single_list_screen/: category_list.rs  edit_list_dialog.rs  mod.rs  pie_chart.rs  total_list.rs
src/: data_structures.rs  main.rs
src/categorization/: gemini.rs
src/ui/: add_list_dialog.rs
src/ui/items_screen/information_panel/: edit_item_dialog.rs
src/ui/multi_list_screen/: categories.rs
src/ui/single_list_screen/: category_list.rs  mod.rs  pie_chart.rs  total_list.rs
