[package]
name = "shoppinglistanalyzer"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
gtk4 = "0.9.5"
reqwest = "0.12.12"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlite = "0.36.2"
charming = { version = "0.4", features = ["ssr"] }
gdk-pixbuf = "0.20.9"
rsvg = "0.4.0"
cairo-rs = "0.20.7"
